// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskField /> renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <InputError
      disabled={false}
      max={10}
      min={1}
      noError={true}
      noMargin={true}
      onBlur={[Function]}
      onChange={[Function]}
      onInvalid={[Function]}
      type="number"
      value={3}
    />
  </div>
</form>
`;

exports[`<TaskField /> renders correctly 2`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <InputError
      noError={true}
      noMargin={true}
      onBlur={[Function]}
      onChange={[Function]}
      onInvalid={[Function]}
      type="number"
    />
  </div>
</form>
`;
